src/component-library/site-components/HomepageHero/HomepageHero.module.scss
@use '../../foundation/index.module' as *;
@use '../../utilities/index.module' as *;

.wrapper {
  --image-size: #{px-to-rem(566)};

  background-color: var(--background);
  color: var(--text);
  position: relative;
  z-index: 1;
  overflow-x: clip;
  padding: $spacing-13 0 calc((var(--image-size) / 2) + px-to-rem(40));
  margin-bottom: calc(var(--image-size) / 2 - px-to-rem(40));

  @include media(screen-m) {
    --image-size: #{px-to-rem(894)};

    padding-bottom: calc((var(--image-size) / 2) * 0.75);
    margin-bottom: calc((var(--image-size) / 2) * 0.25);
  }

  @include media(screen-l) {
    --image-size: #{px-to-rem(1336)};

    padding: px-to-rem(32) 0;
    display: flex;
    align-items: center;
    min-height: calc(100vh - px-to-rem(110)); //  calc to account for site nav
    margin-bottom: px-to-rem(150);
  }

  @include media(screen-xl) {
    --image-size: #{px-to-rem(1460)};

    padding: px-to-rem(32) 0;
    margin-bottom: px-to-rem(250);
  }
}

/* Text content */
.container {
  @include responsive-container;
  @include responsive-grid;

  @include media(screen-l) {
    width: 100%;
  }

  .title,
  .cta-section {
    @include responsive-grid-span($breakpoint-m: 4, $breakpoint-l: 6);
  }

  .search {
    @include responsive-grid-span($breakpoint-l: 7);
  }

  .cta-section {
    margin-top: $spacing-7;
  }

  .ctas {
    margin-top: $spacing-3;
    display: grid;
    gap: $spacing-2;

    @include media(screen-m) {
      width: max-content;
    }
  }
}

/* Image positioning */
.image {
  width: var(--image-size);
  height: var(--image-size);
  position: absolute;
  bottom: calc(var(--image-size) * -0.5);
  left: 50%;
  transform: translateX(-50%);
  mask: url('../../assets/shapes/diamond-curved.svg');
  mask-repeat: no-repeat;
  mask-size: 100%;
  mask-position: center;
  z-index: -1;

  @include media(screen-m) {
    right: calc(var(--image-size) * -0.36);
    bottom: calc(var(--image-size) * -0.25);
    left: unset;
    transform: none;
  }

  @include media(screen-l) {
    top: -46%;
    right: calc(var(--image-size) * -0.5);
    bottom: unset;
  }

  @include media(screen-xl) {
    top: -42%;
    right: calc(var(--image-size) * -0.4);
  }

  img {
    width: 100%;
    height: 100%;
    object-position: center;
    object-fit: cover;

    @include media(screen-m) {
      object-position: right;
    }
  }
}

